Creación de tablas de ASP.NET Identity en la primera migración.

--- a/Vidly/Web.config
+++ b/Vidly/Web.config
@@ -9,9 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342" />
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Vidly-20170622071622.mdf;Initial Catalog=aspnet-Vidly-20170622071622;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />
+  <connectionStrings>   
+    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=ADMINISTRADOR;Password=ADMINISTRADOR;Data Source=VIDLY" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -107,7 +106,10 @@
     </DbProviderFactories>
   </system.data>
   <oracle.manageddataaccess.client>
-    <version number="*">
+    <version number="4.122.1.0">
+      <settings>
+        <setting name="tns_admin" value="C:\app\Juan\product\11.2.0\dbhome_1\NETWORK\ADMIN"/>
+      </settings>
       <dataSources>
         <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) " />
       </dataSources>
