Seeding the database.

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -219,6 +219,10 @@
     <Compile Include="Migrations\201706291809259_AddMembershipType.Designer.cs">
       <DependentUpon>201706291809259_AddMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706292308038_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201706292308038_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201706292308038_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -323,6 +327,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706291809259_AddMembershipType.resx">
       <DependentUpon>201706291809259_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706292308038_PopulateMembershipTypes.resx">
+      <DependentUpon>201706292308038_PopulateMembershipTypes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
