--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -239,9 +239,22 @@
     <Compile Include="Migrations\201706300039168_AddBirthdateToCustomersTable.Designer.cs">
       <DependentUpon>201706300039168_AddBirthdateToCustomersTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706300059010_AddMoviesTable.cs" />
+    <Compile Include="Migrations\201706300059010_AddMoviesTable.Designer.cs">
+      <DependentUpon>201706300059010_AddMoviesTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706300104540_AddGenre.cs" />
+    <Compile Include="Migrations\201706300104540_AddGenre.Designer.cs">
+      <DependentUpon>201706300104540_AddGenre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706300105506_PopulateGenresTable.cs" />
+    <Compile Include="Migrations\201706300105506_PopulateGenresTable.Designer.cs">
+      <DependentUpon>201706300105506_PopulateGenresTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -312,6 +325,7 @@
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -358,6 +372,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706300039168_AddBirthdateToCustomersTable.resx">
       <DependentUpon>201706300039168_AddBirthdateToCustomersTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706300059010_AddMoviesTable.resx">
+      <DependentUpon>201706300059010_AddMoviesTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706300104540_AddGenre.resx">
+      <DependentUpon>201706300104540_AddGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706300105506_PopulateGenresTable.resx">
+      <DependentUpon>201706300105506_PopulateGenresTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
