Building an API with Web API.

--- a/Vidly/Web.config
+++ b/Vidly/Web.config
@@ -33,7 +33,12 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
-  </system.webServer>
+  <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -108,7 +113,7 @@
   <oracle.manageddataaccess.client>
     <version number="4.122.1.0">
       <settings>
-        <setting name="tns_admin" value="C:\app\Juan\product\11.2.0\dbhome_1\NETWORK\ADMIN"/>
+        <setting name="tns_admin" value="C:\app\Juan\product\11.2.0\dbhome_1\NETWORK\ADMIN" />
       </settings>
       <dataSources>
         <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) " />
