--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -271,6 +271,10 @@
     <Compile Include="Migrations\201706300105506_PopulateGenresTable.Designer.cs">
       <DependentUpon>201706300105506_PopulateGenresTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707092236491_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\201707092236491_AddDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>201707092236491_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -582,6 +586,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706300105506_PopulateGenresTable.resx">
       <DependentUpon>201706300105506_PopulateGenresTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707092236491_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>201707092236491_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
