--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -275,6 +275,10 @@
     <Compile Include="Migrations\201707092236491_AddDrivingLicenseToApplicationUser.Designer.cs">
       <DependentUpon>201707092236491_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707101400328_AddPhoneToApplicationUser.cs" />
+    <Compile Include="Migrations\201707101400328_AddPhoneToApplicationUser.Designer.cs">
+      <DependentUpon>201707101400328_AddPhoneToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -589,6 +593,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707092236491_AddDrivingLicenseToApplicationUser.resx">
       <DependentUpon>201707092236491_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707101400328_AddPhoneToApplicationUser.resx">
+      <DependentUpon>201707101400328_AddPhoneToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
