--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\API\CustomersController.cs" />
     <Compile Include="Controllers\API\MoviesController.cs" />
+    <Compile Include="Controllers\API\NewRentalsController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -220,6 +221,7 @@
     <Compile Include="Dtos\GenreDto.cs" />
     <Compile Include="Dtos\MembershipTypeDto.cs" />
     <Compile Include="Dtos\MovieDto.cs" />
+    <Compile Include="Dtos\NewRentalDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -279,6 +281,14 @@
     <Compile Include="Migrations\201707101400328_AddPhoneToApplicationUser.Designer.cs">
       <DependentUpon>201707101400328_AddPhoneToApplicationUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707132024145_AddRental.cs" />
+    <Compile Include="Migrations\201707132024145_AddRental.Designer.cs">
+      <DependentUpon>201707132024145_AddRental.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707132120217_AddNumberAvailableToMovie.cs" />
+    <Compile Include="Migrations\201707132120217_AddNumberAvailableToMovie.Designer.cs">
+      <DependentUpon>201707132120217_AddNumberAvailableToMovie.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -288,6 +298,7 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\Rental.cs" />
     <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -596,6 +607,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707101400328_AddPhoneToApplicationUser.resx">
       <DependentUpon>201707101400328_AddPhoneToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707132024145_AddRental.resx">
+      <DependentUpon>201707132024145_AddRental.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707132120217_AddNumberAvailableToMovie.resx">
+      <DependentUpon>201707132120217_AddNumberAvailableToMovie.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
