--- a/Vidly/Web.config
+++ b/Vidly/Web.config
@@ -12,14 +12,7 @@
   <connectionStrings>   
     <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=ADMINISTRADOR;Password=ADMINISTRADOR;Data Source=VIDLY" />
   </connectionStrings>
-  <appSettings>
-    <add key="TwitterAppId" value="12345"/>
-    <add key="TwitterAppSecret" value="abcde"/>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  </appSettings>
+  <appSettings configSource="AppSettings.config"></appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
