--- a/Vidly/Web.config
+++ b/Vidly/Web.config
@@ -14,6 +14,9 @@
   </connectionStrings>
   <appSettings configSource="AppSettings.config"></appSettings>
   <system.web>
+    <customErrors mode="On">
+      <error statusCode="404" redirect="~/404.html"/>
+    </customErrors>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
@@ -22,6 +25,10 @@
     </httpModules>
   </system.web>
   <system.webServer>
+    <httpErrors errorMode="Custom">
+      <remove statusCode="404"/>
+      <error statusCode="404" path="404.html" responseMode="File"/>
+    </httpErrors>
     <modules>
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
